--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
 		"last 2 ios versions"
 	],
 	"devDependencies": {
-		"@babel/core": "^7.22.5",
-		"@babel/preset-env": "^7.22.5",
+		"@babel/cli": "^7.24.8",
+		"@babel/core": "^7.25.2",
+		"@babel/preset-env": "^7.25.4",
 		"autoprefixer": "^10.4.14",
 		"babel-loader": "^9.1.2",
 		"browser-sync": "^2.29.3",
+		"core-js": "^3.38.1",
 		"gulp": "^4.0.2",
 		"gulp-clean-css": "^4.3.0",
 		"gulp-postcss": "^9.0.1",
@@ -29,5 +31,8 @@
 		"webpack": "^5.86.0",
 		"webpack-cli": "^5.1.4",
 		"webpack-stream": "^7.0.0"
+	},
+	"dependencies": {
+		"@babel/polyfill": "^7.12.1"
 	}
 }
